# plane_text_index

./: .gitignore  CMakeLists.txt  README.md  action-io.hpp  algo.hpp  bi-stat-build-index.cpp  bi-stat-loader.cpp  bi-stat-loader.hpp  bi-stat-score-provider.hpp  bi-stat-score.cpp  binary_search_test.cpp  check_upper_bound.cpp  io.hpp  makefile  makefile.old  mmap.hpp  my-io.hpp  ngram_substrings.hpp  one-to-ne-lang-model.cpp  plane_text_dict.hpp  ptr_tools.hpp  slice-reader.hpp  slice-tools.hpp  slice.hpp  slice_test.cpp  tools.hpp  vector-tools-test.cpp  vector-tools.hpp
